Dev merge fixes, and some CachedPersonnelTaskService cleanup.