@@ -1,7 +1,8 @@
 package gov.nysenate.ess.core.service.pec.task;
 
-import com.google.common.collect.*;
-import com.google.common.eventbus.EventBus;
+import com.google.common.collect.ImmutableMap;
+import com.google.common.collect.ImmutableSet;
+import com.google.common.collect.Maps;
 import gov.nysenate.ess.core.dao.pec.assignment.PersonnelTaskAssignmentDao;
 import gov.nysenate.ess.core.dao.pec.task.PersonnelTaskDao;
 import gov.nysenate.ess.core.dao.pec.task.detail.PersonnelTaskDetailDao;
@@ -18,30 +19,25 @@ import org.slf4j.LoggerFactory;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.stereotype.Service;
 
-import java.util.HashSet;
-import java.util.List;
-import java.util.Map;
-import java.util.Set;
+import java.util.*;
 import java.util.function.Function;
+import java.util.stream.Collectors;
 
 /**
  * Implements {@link PersonnelTaskService} using {@link PersonnelTaskDao} and {@link PersonnelTaskDetailDao}
  * and utilizing caching to improve performance.
  */
 @Service
-public class CachedPersonnelTaskService
-        extends CachingService<String, ImmutableSortedMap<Integer, PersonnelTask>>
+public class CachedPersonnelTaskService extends CachingService<Integer, PersonnelTask>
         implements PersonnelTaskService {
 
     private static final Logger logger = LoggerFactory.getLogger(CachedPersonnelTaskService.class);
-
-    /** Key used to store a map of all tasks */
-    private static final String TASK_MAP_KEY = "TASK_MAP_KEY";
     /** Number of seconds the task map is valid in cache before it is evicted */
     private static final int cacheEvictTime = 300;
 
     private final PersonnelTaskDao taskDao;
     private final ImmutableMap<PersonnelTaskType, PersonnelTaskDetailDao<?>> taskDetailDaoMap;
+    // TODO: move these two into PersonnelTaskAdminApiCtrl
     private final EmployeeDao employeeDao;
     private final PersonnelTaskAssignmentDao personnelTaskAssignmentDao;
 
@@ -62,41 +58,49 @@ public class CachedPersonnelTaskService
     }
 
     @Override
-    protected Map<String, ImmutableSortedMap<Integer, PersonnelTask>> initialEntries() {
-        ImmutableSortedMap<Integer, PersonnelTask> map = taskDao.getAllTasks().stream()
-                .map(task -> taskDetailDaoMap.get(task.getTaskType()).getTaskDetails(task))
-                .collect(ImmutableSortedMap.toImmutableSortedMap(
-                        Comparable::compareTo, PersonnelTask::getTaskId, Function.identity()));
-        return Map.of(TASK_MAP_KEY, map);
+    protected Map<Integer, PersonnelTask> initialEntries() {
+        return taskDao.getAllTasks().stream().map(this::getDetailedTask)
+                .collect(Collectors.toMap(PersonnelTask::getTaskId, Function.identity()));
     }
 
     /* --- PersonnelTaskService implementations --- */
 
     @Override
     public Set<Integer> getAllTaskIds(boolean activeOnly) {
-        return getPersonnelTasks(activeOnly).stream()
+        return getPersonnelTasks(activeOnly, false).stream()
                 .map(PersonnelTask::getTaskId)
                 .collect(ImmutableSet.toImmutableSet());
     }
 
     @Override
-    public PersonnelTask getPersonnelTask(int taskId) throws PersonnelTaskNotFoundEx {
-        PersonnelTask personnelTask = getTaskMap().get(taskId);
+    public PersonnelTask getPersonnelTask(int taskId, boolean getDetail) throws PersonnelTaskNotFoundEx {
+        PersonnelTask personnelTask = cache.get(taskId);
         if (personnelTask == null) {
             throw new PersonnelTaskNotFoundEx(taskId);
         }
-        return personnelTask;
+        return getDetail ? personnelTask : getDetailedTask(personnelTask);
     }
 
     @Override
-    public List<PersonnelTask> getPersonnelTasks(boolean activeOnly) {
-        return getTaskMap().values().stream()
-                .filter(task -> !activeOnly || task.isActive()).toList();
+    public List<PersonnelTask> getPersonnelTasks(boolean activeOnly, boolean getDetail) {
+        var iter = cache.iterator();
+        List<PersonnelTask> list = new ArrayList<>();
+        while (iter.hasNext()) {
+            PersonnelTask task = iter.next().getValue();
+            if (!activeOnly || task.isActive()) {
+                list.add(task);
+            }
+        }
+        if (getDetail) {
+            list = list.stream().map(this::getDetailedTask).collect(Collectors.toList());
+        }
+        list.sort(Comparator.comparingInt(PersonnelTask::getTaskId));
+        return list;
     }
 
     @Override
     public List<PersonnelTask> getActiveTasksInGroup(PersonnelTaskAssignmentGroup assignmentGroup) {
-        return getPersonnelTasks(true).stream()
+        return getPersonnelTasks(true, false).stream()
                 .filter(task -> task.getAssignmentGroup() == assignmentGroup).toList();
     }
 
@@ -108,9 +112,8 @@ public class CachedPersonnelTaskService
     }
 
     @Override
-    public void evictContent(String key) {
-        // Removing all since there is only one key
-        super.clearCache(false);
+    public void evictContent(Integer key) {
+        super.clearCache(true);
     }
 
     public void markTasksComplete() {
@@ -140,13 +143,7 @@ public class CachedPersonnelTaskService
         logger.info("Finished the process of marking specific employees tasks complete");
     }
 
-    /* --- Internal Methods --- */
-
-    private ImmutableSortedMap<Integer, PersonnelTask> getTaskMap() {
-        var value = cache.get(TASK_MAP_KEY);
-        if (value == null) {
-            clearCache(true);
-        }
-        return value;
+    private PersonnelTask getDetailedTask(PersonnelTask basicTask) {
+        return taskDetailDaoMap.get(basicTask.getTaskType()).getTaskDetails(basicTask);
     }
 }
